--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ Jinja2==3.0.1
 Mako==1.1.4
 MarkupSafe==2.0.1
 packaging==23.1
-pluggy==1.3.2
+pluggy
 py==1.11.0
 pytest==7.1.3
 python-dateutil==2.8.1
